--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,700");
 *, *:before, *:after {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  backface-visibility: hidden; }
 
 html, body {
   margin: 0;
@@ -126,7 +127,7 @@ html, body {
     border: 1px solid whitesmoke;
     border-radius: 8px;
     background-color: white;
-    background: url("../assets/bg_01.svg"), linear-gradient(to bottom, white 70%, whitesmoke);
+    background: url("../assets/bg_01.svg"), linear-gradient(to bottom, white 10%, whitesmoke);
     background-size: 200px, cover;
     z-index: 100; }
 
@@ -152,13 +153,13 @@ html, body {
     overflow: hidden;
     filter: grayscale(100%);
     transition: all 200ms ease; }
-  .project > a > span {
+  .project > a > .project--title {
     display: inline-block;
     position: relative;
-    margin: 10px 0 5px 0;
+    margin: 10px 10px 5px 0;
     font-size: 1.1rem;
     font-weight: 700; }
-    .project > a > span:after {
+    .project > a > .project--title:after {
       content: "";
       position: absolute;
       bottom: 0;
@@ -168,14 +169,20 @@ html, body {
       width: 0;
       background-color: rgba(0, 0, 0, 0.4);
       transition: width 300ms ease; }
+  .project > a > .project--tech {
+    display: inline-block;
+    color: rgba(0, 0, 0, 0.4);
+    transition: all 300ms ease; }
   .project > a > p {
     margin: 0; }
   .project > a:hover > img {
     filter: grayscale(0); }
-  .project > a:hover > span:after {
+  .project > a:hover > .project--title:after {
     content: "";
     display: block;
     width: 100%; }
+  .project > a:hover > .project--tech {
+    color: rgba(255, 0, 0, 0.8); }
 
 .otherProjects {
   grid-area: other;
