--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -14,7 +14,7 @@
     border: 1px solid whitesmoke;
     border-radius: 8px;
     background-color: white;
-    background: url("../assets/bg_01.svg"), linear-gradient(to bottom, white 70%, whitesmoke);
+    background: url("../assets/bg_01.svg"), linear-gradient(to bottom, white 10%, whitesmoke);
     background-size: 200px, cover;
     z-index: 100; }
 
@@ -40,13 +40,13 @@
     overflow: hidden;
     filter: grayscale(100%);
     transition: all 200ms ease; }
-  .project > a > span {
+  .project > a > .project--title {
     display: inline-block;
     position: relative;
-    margin: 10px 0 5px 0;
+    margin: 10px 10px 5px 0;
     font-size: 1.1rem;
     font-weight: 700; }
-    .project > a > span:after {
+    .project > a > .project--title:after {
       content: "";
       position: absolute;
       bottom: 0;
@@ -56,14 +56,20 @@
       width: 0;
       background-color: rgba(0, 0, 0, 0.4);
       transition: width 300ms ease; }
+  .project > a > .project--tech {
+    display: inline-block;
+    color: rgba(0, 0, 0, 0.4);
+    transition: all 300ms ease; }
   .project > a > p {
     margin: 0; }
   .project > a:hover > img {
     filter: grayscale(0); }
-  .project > a:hover > span:after {
+  .project > a:hover > .project--title:after {
     content: "";
     display: block;
     width: 100%; }
+  .project > a:hover > .project--tech {
+    color: rgba(255, 0, 0, 0.8); }
 
 .otherProjects {
   grid-area: other;
