--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -18,7 +18,7 @@
     border-radius: 8px;
 
     background-color: white;
-    background: url("../assets/bg_01.svg"), linear-gradient(to bottom,white 70%,whitesmoke);
+    background: url("../assets/bg_01.svg"), linear-gradient(to bottom,white 10%,whitesmoke);
     background-size: 200px, cover;
     z-index: 100;
   }
@@ -53,10 +53,10 @@
       transition: all 200ms ease;
     }
     
-    > span {
+    > .project--title {
       display: inline-block;
       position: relative;
-      margin: 10px 0 5px 0;
+      margin: 10px 10px 5px 0;
       font-size: 1.1rem;
       font-weight: 700;
       
@@ -72,6 +72,12 @@
         transition: width 300ms ease;
       }
     }
+
+    > .project--tech {
+      display: inline-block;
+      color: rgba(black, 0.4);
+      transition: all 300ms ease;
+    }
     
     > p {
       margin: 0;
@@ -81,10 +87,15 @@
       > img {
         filter: grayscale(0);
       }
-      > span:after {
+
+      > .project--title:after {
         content: "";
         display: block;
         width: 100%;
+      }
+
+      > .project--tech {
+        color: rgba(red, 0.8)
       }
     }
 
